--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ disableSitemap = false
 disable404     = false
 disableHugoGeneratorInject = false
 
-GoogleAnalytics  = "53504989"
+GoogleAnalytics  = 53504989
 
 [permalinks]
   posts = "/posts/:year/:month/:slug/"
