--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
     listen        443 ssl http2;
     listen        [::]:80;
     listen        [::]:443 ssl http2;
-    server_name   1wa.co;
+    server_name   1wa.co www.1wa.co;
 
     ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
