--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -49,11 +49,19 @@ http {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($server_port = 80) { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://1wa.co$request_uri; }
+    if ($host ~ '^www\.') {
+      set $https_redirect 1;
+    }
+    if ($server_port = 80) {
+      set $https_redirect 1;
+    }
+    if ($https_redirect = 1) {
+      return 301 https://1wa.co$request_uri;
+    }
 
-    location /.well-known/acme-challenge/ { root /var/www/certbot; }
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
 
     location / {
       resolver                            127.0.0.11;
