--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -38,9 +38,9 @@ http {
 
   server {
     listen        80;
-    listen        [::]:80;
-    listen        443 ssl http2;
-    listen        [::]:443 ssl http2;
+    # listen        [::]:80;
+    listen        443 ssl;
+    # listen        [::]:443 ssl;
     server_name   1wa.co www.1wa.co;
 
     ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
