--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -38,15 +38,21 @@ http {
   gzip_comp_level 7;
 
   server {
-    listen        80;
-    listen        [::]:80;
-    listen        443 ssl http2;
-    listen        [::]:443 ssl http2;
-    server_name   1wa.co www.1wa.co;
+    listen      80;
+    listen      [::]:80;
+    server_name 1wa.co www.1wa.co;
 
-    location /.well-known/acme-challenge/ {
-      root /var/www/certbot;
-    }
+    location /.well-known/acme-challenge/ { root /var/www/certbot; }
+
+    if ($host ~ '^www\.') { set $https_redirect 1; }
+    if ($server_port = 80) { set $https_redirect 1; }
+    if ($https_redirect = 1) { return 301 https://$host$request_uri; }
+  }
+
+  server {
+    listen      443 ssl http2;
+    listen      [::]:443 ssl http2;
+    server_name 1wa.co www.1wa.co;
 
     ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
@@ -54,19 +60,11 @@ http {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    if ($host ~ '^www\.') {
-      set $https_redirect 1;
-    }
-    if ($server_port = 80) {
-      set $https_redirect 1;
-    }
-    if ($https_redirect = 1) {
-      return 301 https://1wa.co$request_uri;
-    }
+    if ($host ~ '^www\.') { set $https_redirect 1; }
+    if ($https_redirect = 1) { return 301 https://$host$request_uri; }
 
     location / {
       resolver                            127.0.0.11;
-
       proxy_pass                          http://app:8080;
       proxy_set_header Host               $host;
       proxy_set_header X-Real-IP          $remote_addr;
