--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -44,9 +44,7 @@ http {
 
     location /.well-known/acme-challenge/ { root /var/www/certbot; }
 
-    if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($server_port = 80) { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://$host$request_uri; }
+    return 301 https://$host$request_uri;
   }
 
   server {
