--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -43,8 +43,7 @@ http {
     server_name 1wa.co www.1wa.co;
 
     location /.well-known/acme-challenge/ { root /var/www/certbot; }
-
-    return 301 https://$host$request_uri;
+    location / { return 301 https://$host$request_uri; }
   }
 
   server {
