--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
     listen      [::]:80;
     server_name 1wa.co www.1wa.co;
 
-    location /.well-known/acme-challenge/ { root /var/www/certbot; }
+    location /.well-known { root /var/www/certbot; }
     location / { return 301 https://$host$request_uri; }
   }
 
