--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -38,12 +38,16 @@ http {
   gzip_comp_level 7;
 
   server {
-    listen      80;
-    listen      [::]:80;
+    listen      80 default_server;
+    listen      [::]:80 default_server;
     server_name 1wa.co www.1wa.co;
 
-    location /.well-known { root /var/www/certbot; }
-    location / { return 301 https://$host$request_uri; }
+    location ^~ /.well-known/acme-challenge/ {
+      default_type "text/plain";
+      root /var/www/certbot;
+    }
+
+    return 301 https://$host$request_uri;
   }
 
   server {
