--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -47,7 +47,7 @@ http {
       root /var/www/certbot;
     }
 
-    return 301 https://$host$request_uri;
+    # return 301 https://$host$request_uri;
   }
 
   # server {
