--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -47,30 +47,30 @@ http {
       root /var/www/certbot;
     }
 
-    # return 301 https://$host$request_uri;
+    return 301 https://$host$request_uri;
   }
 
-  # server {
-  #   listen      443 ssl http2;
-  #   listen      [::]:443 ssl http2;
-  #   server_name 1wa.co www.1wa.co;
+  server {
+    listen      443 ssl http2;
+    listen      [::]:443 ssl http2;
+    server_name 1wa.co www.1wa.co;
 
-  #   ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
-  #   ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
 
-  #   include /etc/letsencrypt/options-ssl-nginx.conf;
-  #   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-  #   if ($host ~ '^www\.') { set $https_redirect 1; }
-  #   if ($https_redirect = 1) { return 301 https://$host$request_uri; }
+    if ($host ~ '^www\.') { set $https_redirect 1; }
+    if ($https_redirect = 1) { return 301 https://$host$request_uri; }
 
-  #   location / {
-  #     resolver                            127.0.0.11;
-  #     proxy_pass                          http://app:8080;
-  #     proxy_set_header Host               $host;
-  #     proxy_set_header X-Real-IP          $remote_addr;
-  #     proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-  #     proxy_set_header X-Forwarded-Proto  $scheme;
-  #   }
-  # }
+    location / {
+      resolver                            127.0.0.11;
+      proxy_pass                          http://app:8080;
+      proxy_set_header Host               $host;
+      proxy_set_header X-Real-IP          $remote_addr;
+      proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto  $scheme;
+    }
+  }
 }
