--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -42,10 +42,7 @@ http {
     listen      [::]:80;
     server_name 1wa.co www.1wa.co;
 
-    location ^~ /.well-known/acme-challenge/ {
-      default_type "text/plain";
-      root /var/www/certbot;
-    }
+    location /.well-known/acme-challenge/ { root /var/www/certbot; }
 
     return 301 https://$host$request_uri;
   }
