--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -43,7 +43,9 @@ http {
     server_name 1wa.co www.1wa.co;
 
     location /.well-known/acme-challenge/ { root /var/www/certbot; }
-    location / { return 301 https://$host$request_uri; }
+
+    if ($request_uri ~ '^\.well-known') { set $https_redirect 1; }
+    if ($https_redirect = 1) { return 301 https://$host$request_uri; }
   }
 
   server {
