--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -42,10 +42,12 @@ http {
     listen      [::]:80;
     server_name 1wa.co www.1wa.co;
 
-    location /.well-known/acme-challenge/ { root /var/www/certbot; }
-
-    if ($request_uri ~ '^\.well-known') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://$host$request_uri; }
+    if ($request_uri ~ '^\.well-known') {
+      location /.well-known/acme-challenge/ { root /var/www/certbot; }
+    }
+    else {
+      return 301 https://$host$request_uri;
+    }
   }
 
   server {
