--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -42,12 +42,11 @@ http {
     listen      [::]:80;
     server_name 1wa.co www.1wa.co;
 
-    if ($request_uri ~ '^\.well-known') {
+    if ($request_uri ~ "^/\.well-known") {
       location /.well-known/acme-challenge/ { root /var/www/certbot; }
     }
-    else {
-      return 301 https://$host$request_uri;
-    }
+
+    return 301 https://$host$request_uri;
   }
 
   server {
