--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -42,11 +42,11 @@ http {
     listen      [::]:80;
     server_name 1wa.co www.1wa.co;
 
-    if ($request_uri ~ "^/\.well-known") {
-      location /.well-known/acme-challenge/ { root /var/www/certbot; }
+    if ($request_uri !~ "^/\.well-known") {
+      return 301 https://$host$request_uri;
     }
 
-    return 301 https://$host$request_uri;
+    location /.well-known/acme-challenge/ { root /var/www/certbot; }
   }
 
   server {
