--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
 
     location /.well-known/acme-challenge/ { root /var/www/certbot; }
 
-    if ($request_uri !~ "^/\.well-known") {
+    if ($request_uri !~ "^/\.well-known/\w+") {
       ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
       ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
 
