--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -46,14 +46,14 @@ http {
 
     location /.well-known/acme-challenge/ { root /var/www/certbot; }
 
-    if ($request_uri !~ "^/\.well-known/\w+") {
+    if ($request_uri !~ ^/\.well-known) {
       ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
       ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
 
       include /etc/letsencrypt/options-ssl-nginx.conf;
       ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-      if ($host ~ '^www\.') { set $https_redirect 1; }
+      if ($host ~ ^www\.) { set $https_redirect 1; }
       if ($https_redirect = 1) { return 301 https://$host$request_uri; }
 
       location / {
