--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -38,7 +38,7 @@ http {
 
   server {
     listen      80;
-    listen      [::]:80;
+    # listen      [::]:80;
     server_name 1wa.co www.1wa.co;
 
     location /.well-known/acme-challenge { root /var/www/certbot; }
