--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -42,7 +42,8 @@ http {
     server_name 1wa.co www.1wa.co;
 
     location /.well-known/acme-challenge { root /var/www/certbot; }
-    location / { return 301 https://$host$request_uri; }
+
+    if ($request_uri !~ '^/\.well-known') { return 301 https://$host$request_uri; }
   }
 
   # server {
@@ -55,6 +56,8 @@ http {
 
   #   include /etc/letsencrypt/options-ssl-nginx.conf;
   #   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  #   ssl_session_cache shared:SSL:10m;
+  #   ssl_session_timeout 10m;
 
   #   if ($host ~ ^www\.) { set $https_redirect 1; }
   #   if ($https_redirect = 1) { return 301 https://$host$request_uri; }
