--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -41,11 +41,9 @@ http {
     listen      [::]:80;
     server_name 1wa.co www.1wa.co;
 
-    if ($request_uri ~ '^\.well-known') { location /.well-known/acme-challenge { root /var/www/certbot; } }
+    location /.well-known/acme-challenge { root /var/www/certbot; }
 
-    location / {
-      return 301 https://$host$request_uri;
-    }
+    location / { return 301 https://$host$request_uri; }
   }
 
   # server {
