--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -43,7 +43,7 @@ http {
 
     location /.well-known/acme-challenge { root /var/www/certbot; }
 
-    location / { return 301 https://$host$request_uri; }
+    # location / { return 301 https://$host$request_uri; }
   }
 
   server {
