--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -39,7 +39,7 @@ http {
   server {
     listen      80;
     # listen      [::]:80;
-    listen      443 ssl http2;
+    # listen      443 ssl http2;
     # listen      [::]:443 ssl http2;
     server_name 1wa.co www.1wa.co;
 
