--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -38,9 +38,17 @@ http {
 
   server {
     listen      80;
-    # listen      [::]:80;
-    # listen      443 ssl http2;
-    # listen      [::]:443 ssl http2;
+    listen      [::]:80;
+    server_name 1wa.co www.1wa.co;
+
+    location /.well-known/acme-challenge { root /var/www/certbot; }
+
+    location / { return 301 https://$host$request_uri; }
+  }
+
+  server {
+    listen      443 ssl http2;
+    listen      [::]:443 ssl http2;
     server_name 1wa.co www.1wa.co;
 
     ssl_certificate /etc/letsencrypt/live/1wa.co/fullchain.pem;
@@ -48,19 +56,19 @@ http {
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
-    if ($host ~ '^www\.') { set $https_redirect 1; }
+    if ($host ~ ^www\.) { set $https_redirect 1; }
     if ($https_redirect = 1) { return 301 https://$host$request_uri; }
-
-    location /.well-known/acme-challenge { root /var/www/certbot; }
 
     location / {
       resolver                            127.0.0.11;
       proxy_pass                          http://app:8080;
-      # proxy_set_header Host               $host;
-      # proxy_set_header X-Real-IP          $remote_addr;
-      # proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-      # proxy_set_header X-Forwarded-Proto  $scheme;
+      proxy_set_header Host               $host;
+      proxy_set_header X-Real-IP          $remote_addr;
+      proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto  $scheme;
     }
   }
 }
