--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -55,7 +55,7 @@ http {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    if ($host ~ ^www\.) { set $https_redirect 1; }
+    if ($host ~ '^www\.') { set $https_redirect 1; }
     if ($https_redirect = 1) { return 301 https://$host$request_uri; }
 
     location / {
