--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
 
     location /.well-known/acme-challenge { root /var/www/certbot; }
 
-    location / { return 301 https://$host$request_uri; }
+    location / { return 301 https://1wa.co$request_uri; }
   }
 
   server {
@@ -56,7 +56,7 @@ http {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://$host$request_uri; }
+    if ($https_redirect = 1) { return 301 https://1wa.co$request_uri; }
 
     location / {
       resolver                            127.0.0.11;
