--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -130,7 +130,7 @@ http {
   # App mirror 1 config for register SSL (Certbot)
   server {
     listen      80;
-    listen      443;
+    # listen      443;
     server_name $app_domain_mirror_1 www.$app_domain_mirror_1;
 
     # Allow only for register SSL (Certbot)
@@ -143,7 +143,7 @@ http {
   # App mirror 2 config for register SSL (Certbot)
   server {
     listen      80;
-    listen      443;
+    # listen      443;
     server_name $app_domain_mirror_2 www.$app_domain_mirror_2;
 
     # Allow only for register SSL (Certbot)
