--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -131,7 +131,7 @@ http {
   # App mirror 1 config for register SSL (Certbot)
   server {
     listen      80;
-    listen      443;
+    # listen      443;
 
     # App domain without WWW
     set $app_domain 1wa.co;
@@ -151,7 +151,7 @@ http {
   # App mirror 2 config for register SSL (Certbot)
   server {
     listen      80;
-    listen      443;
+    # listen      443;
 
     # App domain without WWW
     set $app_domain 1wa.co;
