--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -51,12 +51,15 @@ http {
 	ssl_session_cache   shared:SSL:10m;
 	ssl_session_tickets off;
 
+  # App domain without WWW
+  set $app_domain 1wa.co;
+
+  set $app_domain_mirror_1 truewebartisans.com;
+  set $app_domain_mirror_2 webartisans.org;
+
   # App server config for HTTPS
   server {
     listen      443 ssl http2;
-
-    # App domain without WWW
-    set $app_domain 1wa.co;
 
     server_name $app_domain www.$app_domain;
 
@@ -115,10 +118,6 @@ http {
   # App server config for register SSL (Certbot)
   server {
     listen      80;
-
-    # App domain without WWW
-    set $app_domain 1wa.co;
-
     server_name $app_domain www.$app_domain;
 
     # Allow only for register SSL (Certbot)
@@ -132,14 +131,7 @@ http {
   server {
     listen      80;
     # listen      443;
-
-    # App domain without WWW
-    set $app_domain 1wa.co;
-
-    # Mirror domain
-    set $app_domain_mirror truewebartisans.com;
-
-    server_name $app_domain_mirror www.$app_domain_mirror;
+    server_name $app_domain_mirror_1 www.$app_domain_mirror_1;
 
     # Allow only for register SSL (Certbot)
     location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
@@ -152,14 +144,7 @@ http {
   server {
     listen      80;
     # listen      443;
-
-    # App domain without WWW
-    set $app_domain 1wa.co;
-
-    # Mirror domain
-    set $app_domain_mirror webartisans.org;
-
-    server_name $app_domain_mirror www.$app_domain_mirror;
+    server_name $app_domain_mirror_2 www.$app_domain_mirror_2;
 
     # Allow only for register SSL (Certbot)
     location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
