--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -52,20 +52,20 @@ http {
 	ssl_session_tickets off;
 
   # App domain without WWW
-  set $app_domain 1wa.co;
+  # set $app_domain 1wa.co;
 
-  set $app_domain_mirror_1 truewebartisans.com;
-  set $app_domain_mirror_2 webartisans.org;
+  # set $app_domain_mirror_1 truewebartisans.com;
+  # set $app_domain_mirror_2 webartisans.org;
 
   # App server config for HTTPS
   server {
     listen      443 ssl http2;
 
-    server_name $app_domain www.$app_domain;
+    server_name 1wa.co www.1wa.co;
 
     # SSL
-    ssl_certificate     /etc/letsencrypt/live/$app_domain/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/$app_domain/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/1wa.co/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
 
     # Additional Nginx options
     include     /etc/letsencrypt/options-ssl-nginx.conf;
@@ -118,38 +118,38 @@ http {
   # App server config for register SSL (Certbot)
   server {
     listen      80;
-    server_name $app_domain www.$app_domain;
+    server_name 1wa.co www.1wa.co;
 
     # Allow only for register SSL (Certbot)
     location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
 
     # Redirect to HTTPS
-    location / { return 301 https://$app_domain$request_uri; }
+    location / { return 301 https://1wa.co$request_uri; }
   }
 
   # App mirror 1 config for register SSL (Certbot)
   server {
     listen      80;
     # listen      443;
-    server_name $app_domain_mirror_1 www.$app_domain_mirror_1;
+    server_name truewebartisans.com www.truewebartisans.com;
 
     # Allow only for register SSL (Certbot)
     location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
 
     # Redirect to HTTPS
-    location / { return 301 https://$app_domain$request_uri; }
+    location / { return 301 https://1wa.co$request_uri; }
   }
 
   # App mirror 2 config for register SSL (Certbot)
   server {
     listen      80;
     # listen      443;
-    server_name $app_domain_mirror_2 www.$app_domain_mirror_2;
+    server_name webartisans.org www.webartisans.org;
 
     # Allow only for register SSL (Certbot)
     location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
 
     # Redirect to HTTPS
-    location / { return 301 https://$app_domain$request_uri; }
+    location / { return 301 https://1wa.co$request_uri; }
   }
 }
