--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -51,16 +51,9 @@ http {
 	ssl_session_cache   shared:SSL:10m;
 	ssl_session_tickets off;
 
-  # App domain without WWW
-  # set $app_domain 1wa.co;
-
-  # set $app_domain_mirror_1 truewebartisans.com;
-  # set $app_domain_mirror_2 webartisans.org;
-
   # App server config for HTTPS
   server {
     listen      443 ssl http2;
-
     server_name 1wa.co www.1wa.co;
 
     # SSL
@@ -83,7 +76,7 @@ http {
 
     # Redirect to domain without WWW
     if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://$app_domain$request_uri; }
+    if ($https_redirect = 1) { return 301 https://1wa.co$request_uri; }
 
     # Proxy for app
     location / {
