--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -114,35 +114,35 @@ http {
     server_name 1wa.co www.1wa.co;
 
     # Allow only for register SSL (Certbot)
-    location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
+    location /.well-known/acme-challenge { root /var/www/certbot; }
 
     # Redirect to HTTPS
     location / { return 301 https://1wa.co$request_uri; }
   }
 
   # App mirror 1 config for register SSL (Certbot)
-  server {
-    listen      80;
-    # listen      443;
-    server_name truewebartisans.com www.truewebartisans.com;
+  # server {
+  #   listen      80;
+  #   # listen      443;
+  #   server_name truewebartisans.com www.truewebartisans.com;
 
-    # Allow only for register SSL (Certbot)
-    location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
+  #   # Allow only for register SSL (Certbot)
+  #   location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
 
-    # Redirect to HTTPS
-    location / { return 301 https://1wa.co$request_uri; }
-  }
+  #   # Redirect to HTTPS
+  #   location / { return 301 https://1wa.co$request_uri; }
+  # }
 
-  # App mirror 2 config for register SSL (Certbot)
-  server {
-    listen      80;
-    # listen      443;
-    server_name webartisans.org www.webartisans.org;
+  # # App mirror 2 config for register SSL (Certbot)
+  # server {
+  #   listen      80;
+  #   # listen      443;
+  #   server_name webartisans.org www.webartisans.org;
 
-    # Allow only for register SSL (Certbot)
-    location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
+  #   # Allow only for register SSL (Certbot)
+  #   location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
 
-    # Redirect to HTTPS
-    location / { return 301 https://1wa.co$request_uri; }
-  }
+  #   # Redirect to HTTPS
+  #   location / { return 301 https://1wa.co$request_uri; }
+  # }
 }
