--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -47,66 +47,9 @@ http {
   gzip_comp_level 6;
 
   # SSL
-	# ssl_session_timeout 1d;
-	# ssl_session_cache   shared:SSL:10m;
-	# ssl_session_tickets off;
-
-  # App server config for HTTPS
-  server {
-    listen      443 ssl http2;
-    server_name 1wa.co www.1wa.co;
-
-    # SSL
-    ssl_certificate     /etc/letsencrypt/live/1wa.co/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
-
-    # Additional Nginx options
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-
-    # Diffie-Hellman parameter for DHE ciphersuites
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    # Security headers
-    # add_header X-Frame-Options "SAMEORIGIN" always;
-    # add_header X-XSS-Protection "1; mode=block" always;
-    # add_header X-Content-Type-Options "nosniff" always;
-    # add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    # add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-    # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
-    # Redirect to domain without WWW
-    if ($host ~ '^www\.') { set $https_redirect 1; }
-    if ($https_redirect = 1) { return 301 https://1wa.co$request_uri; }
-
-    # Proxy for app
-    location / {
-      resolver                            127.0.0.11;
-      proxy_pass                          http://app:8080;
-      proxy_set_header Host               $host;
-      proxy_set_header X-Real-IP          $remote_addr;
-      proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto  $scheme;
-    }
-
-    # dot files
-    # location ~ /\.(?!well-known) { deny all; }
-
-    # # SEO files
-    # location /robots.txt { log_not_found off; }
-    # location /sitemap.xml { log_not_found off; }
-    # location /favicon.ico { log_not_found off; }
-
-    # # Assets, media
-    # location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
-    #   expires 7d;
-    # }
-
-    # # SVG, fonts
-    # location ~* \.(?:svgz?|ttf|ttc|otf|eot|woff2?)$ {
-    #   add_header Access-Control-Allow-Origin "*";
-    #   expires 7d;
-    # }
-  }
+	ssl_session_timeout 1d;
+	ssl_session_cache   shared:SSL:10m;
+	ssl_session_tickets off;
 
   # App server config for register SSL (Certbot)
   server {
@@ -121,28 +64,72 @@ http {
   }
 
   # App mirror 1 config for register SSL (Certbot)
+  server {
+    listen      80;
+    # listen      443;
+    server_name truewebartisans.com www.truewebartisans.com;
+
+    # Allow only for register SSL (Certbot)
+    location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
+
+    # Redirect to HTTPS
+    location / { return 301 https://1wa.co$request_uri; }
+  }
+
+  # App server config for HTTPS
   # server {
-  #   listen      80;
-  #   # listen      443;
-  #   server_name truewebartisans.com www.truewebartisans.com;
+  #   listen      443 ssl http2;
+  #   server_name 1wa.co www.1wa.co;
 
-  #   # Allow only for register SSL (Certbot)
-  #   location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
+  #   # SSL
+  #   ssl_certificate     /etc/letsencrypt/live/1wa.co/fullchain.pem;
+  #   ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
 
-  #   # Redirect to HTTPS
-  #   location / { return 301 https://1wa.co$request_uri; }
-  # }
+  #   # Additional Nginx options
+  #   include /etc/letsencrypt/options-ssl-nginx.conf;
 
-  # # App mirror 2 config for register SSL (Certbot)
-  # server {
-  #   listen      80;
-  #   # listen      443;
-  #   server_name webartisans.org www.webartisans.org;
+  #   # Diffie-Hellman parameter for DHE ciphersuites
+  #   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-  #   # Allow only for register SSL (Certbot)
-  #   location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
+  #   # Security headers
+  #   add_header X-Frame-Options "SAMEORIGIN" always;
+  #   add_header X-XSS-Protection "1; mode=block" always;
+  #   add_header X-Content-Type-Options "nosniff" always;
+  #   add_header Referrer-Policy "no-referrer-when-downgrade" always;
+  #   add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+  #   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-  #   # Redirect to HTTPS
-  #   location / { return 301 https://1wa.co$request_uri; }
+  #   # Redirect to domain without WWW
+  #   if ($host ~ '^www\.') { set $https_redirect 1; }
+  #   if ($https_redirect = 1) { return 301 https://1wa.co$request_uri; }
+
+  #   # Proxy for app
+  #   location / {
+  #     resolver                            127.0.0.11;
+  #     proxy_pass                          http://app:8080;
+  #     proxy_set_header Host               $host;
+  #     proxy_set_header X-Real-IP          $remote_addr;
+  #     proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+  #     proxy_set_header X-Forwarded-Proto  $scheme;
+  #   }
+
+  #   # dot files
+  #   location ~ /\.(?!well-known) { deny all; }
+
+  #   # SEO files
+  #   location = /robots.txt { log_not_found off; }
+  #   location = `/sitemap.xml { log_not_found off; }
+  #   location = /favicon.ico { log_not_found off; }
+
+  #   # Assets, media
+  #   location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
+  #     expires 7d;
+  #   }
+
+  #   # SVG, fonts
+  #   location ~* \.(?:svgz?|ttf|ttc|otf|eot|woff2?)$ {
+  #     add_header Access-Control-Allow-Origin "*";
+  #     expires 7d;
+  #   }
   # }
 }
