--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -77,59 +77,59 @@ http {
   }
 
   # App server config for HTTPS
-  # server {
-  #   listen      443 ssl http2;
-  #   server_name 1wa.co www.1wa.co;
+  server {
+    listen      443 ssl http2;
+    server_name 1wa.co www.1wa.co;
 
-  #   # SSL
-  #   ssl_certificate     /etc/letsencrypt/live/1wa.co/fullchain.pem;
-  #   ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
+    # SSL
+    ssl_certificate     /etc/letsencrypt/live/1wa.co/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/1wa.co/privkey.pem;
 
-  #   # Additional Nginx options
-  #   include /etc/letsencrypt/options-ssl-nginx.conf;
+    # Additional Nginx options
+    include /etc/letsencrypt/options-ssl-nginx.conf;
 
-  #   # Diffie-Hellman parameter for DHE ciphersuites
-  #   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    # Diffie-Hellman parameter for DHE ciphersuites
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-  #   # Security headers
-  #   add_header X-Frame-Options "SAMEORIGIN" always;
-  #   add_header X-XSS-Protection "1; mode=block" always;
-  #   add_header X-Content-Type-Options "nosniff" always;
-  #   add_header Referrer-Policy "no-referrer-when-downgrade" always;
-  #   add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-  #   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-  #   # Redirect to domain without WWW
-  #   if ($host ~ '^www\.') { set $https_redirect 1; }
-  #   if ($https_redirect = 1) { return 301 https://1wa.co$request_uri; }
+    # Redirect to domain without WWW
+    if ($host ~ '^www\.') { set $https_redirect 1; }
+    if ($https_redirect = 1) { return 301 https://1wa.co$request_uri; }
 
-  #   # Proxy for app
-  #   location / {
-  #     resolver                            127.0.0.11;
-  #     proxy_pass                          http://app:8080;
-  #     proxy_set_header Host               $host;
-  #     proxy_set_header X-Real-IP          $remote_addr;
-  #     proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-  #     proxy_set_header X-Forwarded-Proto  $scheme;
-  #   }
+    # Proxy for app
+    location / {
+      resolver                            127.0.0.11;
+      proxy_pass                          http://app:8080;
+      proxy_set_header Host               $host;
+      proxy_set_header X-Real-IP          $remote_addr;
+      proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto  $scheme;
+    }
 
-  #   # dot files
-  #   location ~ /\.(?!well-known) { deny all; }
+    # dot files
+    location ~ /\.(?!well-known) { deny all; }
 
-  #   # SEO files
-  #   location = /robots.txt { log_not_found off; }
-  #   location = `/sitemap.xml { log_not_found off; }
-  #   location = /favicon.ico { log_not_found off; }
+    # SEO files
+    location = /robots.txt { log_not_found off; }
+    location = `/sitemap.xml { log_not_found off; }
+    location = /favicon.ico { log_not_found off; }
 
-  #   # Assets, media
-  #   location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
-  #     expires 7d;
-  #   }
+    # Assets, media
+    location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
+      expires 7d;
+    }
 
-  #   # SVG, fonts
-  #   location ~* \.(?:svgz?|ttf|ttc|otf|eot|woff2?)$ {
-  #     add_header Access-Control-Allow-Origin "*";
-  #     expires 7d;
-  #   }
-  # }
+    # SVG, fonts
+    location ~* \.(?:svgz?|ttf|ttc|otf|eot|woff2?)$ {
+      add_header Access-Control-Allow-Origin "*";
+      expires 7d;
+    }
+  }
 }
