--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -92,12 +92,12 @@ http {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
+    # add_header X-Frame-Options "SAMEORIGIN" always;
+    # add_header X-XSS-Protection "1; mode=block" always;
     # add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    # add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    # add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
     # Redirect to domain without WWW
     if ($host ~ '^www\.') { set $https_redirect 1; }
@@ -117,9 +117,9 @@ http {
     location ~ /\.(?!well-known) { deny all; }
 
     # SEO files
-    location = /robots.txt { log_not_found off; }
-    location = `/sitemap.xml { log_not_found off; }
-    location = /favicon.ico { log_not_found off; }
+    location /robots.txt { log_not_found off; }
+    location /sitemap.xml { log_not_found off; }
+    location /favicon.ico { log_not_found off; }
 
     # Assets, media
     location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
