--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -114,7 +114,7 @@ http {
     }
 
     # dot files
-    location ~ /\.(?!well-known) { deny all; }
+    # location ~ /\.(?!well-known) { deny all; }
 
     # SEO files
     location /robots.txt { log_not_found off; }
@@ -122,14 +122,14 @@ http {
     location /favicon.ico { log_not_found off; }
 
     # Assets, media
-    location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
-      expires 7d;
-    }
+    # location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
+    #   expires 7d;
+    # }
 
     # SVG, fonts
-    location ~* \.(?:svgz?|ttf|ttc|otf|eot|woff2?)$ {
-      add_header Access-Control-Allow-Origin "*";
-      expires 7d;
-    }
+    # location ~* \.(?:svgz?|ttf|ttc|otf|eot|woff2?)$ {
+    #   add_header Access-Control-Allow-Origin "*";
+    #   expires 7d;
+    # }
   }
 }
