--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,52 @@
+# docker-compose.yml by Vic Shóstak <truewebartisans@gmail.com> (https://1wa.co)
+
 version: "3.7"
 
 services:
-  app:
-    container_name: app
+  frontend:
+    container_name: frontend
     build:
-      context: .
-    networks:
-      nginx_net:
-    restart: always
+      context: ./frontend
+    volumes:
+      - static:/frontend/build
 
   nginx:
     container_name: nginx
     image: nginx:alpine
     networks:
-      nginx_net:
+      - cgapp_net
     volumes:
-      - ./configs/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./configs/certbot/conf:/etc/letsencrypt
-      - ./configs/certbot/www:/var/www/certbot
+      - ./webserver/configs/default.template.conf:/etc/nginx/conf.d/default.template.conf
+      - ./webserver/configs/nginx.conf:/etc/nginx/nginx.conf
+      - ./webserver/certbot/conf:/etc/letsencrypt
+      - ./webserver/certbot/www:/var/www/certbot
+    environment:
+      - APP_DOMAIN=1wa.co
+      - APP_STATIC_FOLDER=static
     ports:
       - 80:80
       - 443:443
     restart: unless-stopped
-    command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
+    command: /bin/sh -c "envsubst < /etc/nginx/conf.d/default.template.conf > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+    depends_on:
+      - frontend
 
   certbot:
     container_name: certbot
     image: certbot/certbot
     networks:
-      nginx_net:
+      - cgapp_net
     volumes:
-      - ./configs/certbot/conf:/etc/letsencrypt
-      - ./configs/certbot/www:/var/www/certbot
+      - ./webserver/certbot/conf:/etc/letsencrypt
+      - ./webserver/certbot/www:/var/www/certbot
     restart: unless-stopped
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    entrypoint: /bin/sh -c "trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;"
+    depends_on:
+      - nginx
 
 networks:
-  nginx_net:
-    name: nginx_net
+  cgapp_net:
+    name: cgapp_net
+
+volumes:
+  static:
