--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,4 @@ FROM node:alpine
 LABEL maintainer="Vic Shóstak <truewebartisans@gmail.com>"
 
 WORKDIR /frontend
-COPY ["package*.json", "src", "./"]
-RUN npm i -s && npm run build:prod
+COPY ["build", "./"]
