--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,33 +3,24 @@
 version: "3.7"
 
 services:
-  frontend:
-    container_name: frontend
-    build:
-      context: ./frontend
-    volumes:
-      - static:/frontend/build
-
   nginx:
     container_name: nginx
     image: nginx:alpine
     networks:
       - cgapp_net
     volumes:
+      - ./frontend/build:/usr/share/nginx/html
       - ./webserver/configs/default.template.conf:/etc/nginx/conf.d/default.template.conf
       - ./webserver/configs/nginx.conf:/etc/nginx/nginx.conf
       - ./webserver/certbot/conf:/etc/letsencrypt
       - ./webserver/certbot/www:/var/www/certbot
     environment:
       - APP_DOMAIN=1wa.co
-      - APP_STATIC_FOLDER=static
     ports:
       - 80:80
       - 443:443
     restart: unless-stopped
     command: /bin/sh -c "envsubst < /etc/nginx/conf.d/default.template.conf > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
-    depends_on:
-      - frontend
 
   certbot:
     container_name: certbot
@@ -47,6 +38,3 @@ services:
 networks:
   cgapp_net:
     name: cgapp_net
-
-volumes:
-  static:
