--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,10 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clear": "rm -rf ../static",
     "start": "parcel ./src/pug/index.pug --open",
-    "build": "parcel build ./src/pug/*.pug -d ../static --public-url ./",
-    "copy:common": "cp ./src/common/* ../static",
-    "build:prod": "npm run clear && npm run build && npm run copy:common"
+    "build": "PARCEL_WORKERS=1 parcel build ./src/pug/*.pug -d ./build",
+    "copy:common": "cp -R ./src/common/* ./build",
+    "build:prod": "npm run build && npm run copy:common"
   },
   "repository": {
     "type": "git",
@@ -22,23 +21,26 @@
     "web",
     "dev"
   ],
-  "author": "Vic Shóstak",
+  "author": "Vic Shóstak <truewebartisans@gmail.com> (https://1wa.co)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/truewebartisans/1wa.co/issues"
   },
   "homepage": "https://github.com/truewebartisans/1wa.co#readme",
-  "devDependencies": {
+  "dependencies": {
     "animate.css": "^3.7.2",
     "cssnano": "^4.1.10",
+    "pug": "^2.0.4",
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.23.7",
+    "stickyfilljs": "^2.1.0"
+  },
+  "devDependencies": {
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "pug": "^2.0.4",
-    "sass": "^1.23.7",
-    "stickyfilljs": "^2.1.0"
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
