--- a/webserver/configs/default.template.conf
+++ b/webserver/configs/default.template.conf
@@ -15,6 +15,10 @@ server {
   listen      443 ssl http2;
   server_name .${APP_DOMAIN};
 
+  # Root & index
+  root /usr/share/nginx/html;
+  index index.html;
+
   # SSL
   ssl_certificate     /etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem;
@@ -41,9 +45,9 @@ server {
   location ~ /\.(?!well-known) { deny all; }
 
   # SEO files
-  location = /robots.txt { alias /${APP_STATIC_FOLDER}/robots.txt; log_not_found off; }
-  location = /sitemap.xml { alias /${APP_STATIC_FOLDER}/sitemap.xml; log_not_found off; }
-  location = /favicon.ico { alias /${APP_STATIC_FOLDER}/favicon.ico; log_not_found off; }
+  location = /robots.txt { log_not_found off; }
+  location = /sitemap.xml { log_not_found off; }
+  location = /favicon.ico { log_not_found off; }
 
   # Assets, media
   location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv)$ {
@@ -58,6 +62,6 @@ server {
 
   # Proxy for App backend
   location / {
-    root /${APP_STATIC_FOLDER}
+    try_files $uri /index.html;
   }
 }
