--- a/webserver/nginx/default.template.conf
+++ b/webserver/nginx/default.template.conf
@@ -39,7 +39,7 @@ server {
   if ($https_redirect = 1) { return 301 https://${APP_DOMAIN}$request_uri; }
 
   # dot files
-  location ~ /\.(?!well-known) { deny all; }
+  location ~* /\.(?!well-known) { deny all; }
 
   # SEO files
   location = /robots.txt { log_not_found off; }
