--- a/webserver/nginx/default.template.conf
+++ b/webserver/nginx/default.template.conf
@@ -35,7 +35,7 @@ server {
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
   # Redirect to domain without WWW
-  if ($host ~ '^www\.') { set $https_redirect 1; }
+  if ($host ~* www\.(.*)) { set $https_redirect 1; }
   if ($https_redirect = 1) { return 301 https://${APP_DOMAIN}$request_uri; }
 
   # dot files
