--- a/webserver/nginx/default.template.conf
+++ b/webserver/nginx/default.template.conf
@@ -7,10 +7,28 @@ server {
   location / { return 301 https://${APP_DOMAIN}$request_uri; }
 }
 
+server {
+  listen      443 ssl http2;
+  server_name www.${APP_DOMAIN};
+
+  # SSL
+  ssl_certificate     /etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem;
+
+  # Additional Nginx options
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+
+  # Diffie-Hellman parameter for DHE ciphersuites
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+  # Redirect to HTTPS
+  location / { return 301 https://${APP_DOMAIN}$request_uri; }
+}
+
 # App server config for HTTPS
 server {
   listen      443 ssl http2;
-  server_name .${APP_DOMAIN};
+  server_name ${APP_DOMAIN};
 
   # Root & index
   root /usr/share/nginx/html;
@@ -33,10 +51,6 @@ server {
   add_header Referrer-Policy "no-referrer-when-downgrade" always;
   add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
-  # Redirect to domain without WWW
-  if ($host ~* www\.(.*)) { set $https_redirect 1; }
-  if ($https_redirect = 1) { return 301 https://${APP_DOMAIN}$request_uri; }
 
   # dot files
   location ~* /\.(?!well-known) { deny all; }
