--- a/webserver/nginx/default.template.conf
+++ b/webserver/nginx/default.template.conf
@@ -73,6 +73,6 @@ server {
 
   # Proxy for App backend
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 }
