--- a/webserver/nginx/certbot.template.conf
+++ b/webserver/nginx/certbot.template.conf
@@ -1,7 +1,7 @@
 # App server config for register SSL (Certbot)
 server {
   listen      80;
-  server_name .${APP_DOMAIN};
+  server_name .${DOMAIN};
 
   # Allow only for register SSL (Certbot)
   location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
