--- a/webserver/nginx/default.template.conf
+++ b/webserver/nginx/default.template.conf
@@ -1,19 +1,19 @@
 # App server config for register SSL (Certbot)
 server {
   listen      80;
-  server_name .${APP_DOMAIN};
+  server_name .${DOMAIN};
 
   # Redirect to HTTPS
-  location / { return 301 https://${APP_DOMAIN}$request_uri; }
+  location / { return 301 https://${DOMAIN}$request_uri; }
 }
 
 server {
   listen      443 ssl http2;
-  server_name www.${APP_DOMAIN};
+  server_name www.${DOMAIN};
 
   # SSL
-  ssl_certificate     /etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
 
   # Additional Nginx options
   include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -22,21 +22,21 @@ server {
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
   # Redirect to HTTPS
-  location / { return 301 https://${APP_DOMAIN}$request_uri; }
+  location / { return 301 https://${DOMAIN}$request_uri; }
 }
 
 # App server config for HTTPS
 server {
   listen      443 ssl http2;
-  server_name ${APP_DOMAIN};
+  server_name ${DOMAIN};
 
   # Root & index
   root /usr/share/nginx/html;
   index index.html;
 
   # SSL
-  ssl_certificate     /etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem;
+  ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
 
   # Additional Nginx options
   include /etc/letsencrypt/options-ssl-nginx.conf;
