Fight with static site and docker

--- a/webserver/nginx/1wa.co.conf
+++ b/webserver/nginx/1wa.co.conf
@@ -1,12 +1,4 @@
-# App server config for register SSL (Certbot)
-server {
-  listen      80;
-  server_name 1wa.co www.1wa.co;
-
-  # Redirect to HTTPS
-  location / { return 301 https://1wa.co$request_uri; }
-}
-
+# App server config for redirect to non-WWW
 server {
   listen      443 ssl http2;
   server_name www.1wa.co;
