--- a/webserver/nginx/default.conf
+++ b/webserver/nginx/default.conf
@@ -5,4 +5,7 @@ server {
 
   # Allow only for register SSL (Certbot)
   location ^~ /.well-known/acme-challenge { root /var/www/certbot; }
+
+  # Redirect to HTTPS
+  location / { return 301 https://1wa.co$request_uri; }
 }
