--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,10 +3,15 @@
 version: "3.7"
 
 services:
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+
   nginx:
     volumes:
-      - ./frontend/build:/usr/share/nginx/html
-      - ./webserver/nginx/default.template.conf:/etc/nginx/conf.d/default.template.conf
+      - ./webserver/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./webserver/nginx/1wa.co.conf:/etc/nginx/sites-enabled/1wa.co.conf
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./webserver/certbot/conf:/etc/letsencrypt
       - ./webserver/certbot/www:/var/www/certbot
