--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     networks:
       - nginx_net
     volumes:
-      - ./webserver/nginx/certbot.template.conf:/etc/nginx/conf.d/default.template.conf
+      - ./webserver/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./webserver/certbot/conf:/etc/letsencrypt
       - ./webserver/certbot/www:/var/www/certbot
     ports:
       - 80:80
     restart: unless-stopped
-    command: /bin/sh -c "envsubst < /etc/nginx/conf.d/default.template.conf > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+    command: ["nginx", "-g", "daemon off;"]
 
   certbot:
     container_name: certbot
