--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,16 @@
-FROM node:alpine
+FROM node:alpine AS base
 
 LABEL maintainer="Vic Shóstak <truewebartisans@gmail.com>"
 
 WORKDIR /frontend
+
+FROM base AS dependencies
+
 COPY package*.json ./
 RUN npm install --only=production
-COPY . .
+
+FROM dependencies AS build
+
+WORKDIR /frontend
+COPY src ./
 RUN npm run build:prod
