--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,3 +14,10 @@ FROM dependencies AS build
 WORKDIR /frontend
 COPY src ./
 RUN npm run build:prod
+
+FROM node:alpine AS release
+
+WORKDIR /frontend
+COPY --from=dependencies /frontend/package.json ./
+RUN npm install --only=production
+COPY --from=build /frontend ./
