--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: ./frontend
     volumes:
-      - static:/frontend/build
+      - static:/frontend/dist
 
   nginx:
     volumes:
