--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /frontend
 COPY package*.json ./
 RUN npm install -g @11ty/eleventy && npm install --only=production
 COPY . .
-RUN npm run build:prod
+RUN npx eleventy
