--- a/webserver/nginx/1wa.co.conf
+++ b/webserver/nginx/1wa.co.conf
@@ -65,6 +65,9 @@ server {
 
   # Proxy for App backend
   location / {
-    try_files $uri $uri/ /index.html;
+    if ($request_uri ~ ^/(.*)\.html$) {
+      return 302 /$1;
+    }
+    try_files $uri $uri.html $uri/ =404;
   }
 }
