Add remote dir to secrets

--- a/.github/workflows/ssh_deploy.yml
+++ b/.github/workflows/ssh_deploy.yml
@@ -28,4 +28,4 @@ jobs:
           passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
           rm: true
           source: "dist/"
-          target: "/var/www/1wa.co/html"
+          target: "${{ secrets.REMOTE_DIR }}"
